    - To-do list did not properly decrement when placing certain entities
---------------------------------------------------------------------------------------------------
Version: 0.6.0
Date: 2021.06.03
  Changes:
    - Implemented Update 4 changes
    - Coal, Fuel and Nuclear generators are now simpler entities
    - Hypertubes now allow junctions and keyboard input to change directions
  Scripting:
    - Make use of defines.prototypes for cleaner code
---------------------------------------------------------------------------------------------------
Version: 0.6.1
Date: 2021.06.04
  Changes:
    - Sub-components of various entites are no longer selectable directly
---------------------------------------------------------------------------------------------------
Version: 0.6.2
Date: 2021.06.05
  Bugfixes:
    - (Industrial) Storage Containers didn't show their contents in the UI, now fixed (kinda)
  Ease of use:
    - "Smart" fast-transfer: transferring items into or out of a Truck Station or Drone port will intelligently select between the fuel box and cargo inventories
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2021.06.05
  Changes:
    - Fuel value of Fuel updated
  Bugfixes:
    - Crash in the Zipline
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2021.06.11
  Features:
    - Added GUI to Power Storage
  Bugfixes:
    - Fix crash when trying to fast-transfer from a tree
    - Rails now work properly in the Build Gun
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2021.06.12
  Changes:
    - Fixed price of Rifle Ammo in AWESOME shop
  Bugfixes:
    - Fixed incorrect icons for resource wells
    - Fixed that Water Extractors did not show on the map
    - Fixed map colour of Splitters/Mergers